kde4libs (4:4.0.0-2) unstable; urgency=low

  * Update arm patch. Avoid conversion to float. Thanks to Pino Toscano.
  * Move hal and pmount Recommends to kdebase-runtime-bin-kde4 package.
  * Rename kdelibs-dbg to kdelibs5-dbg.
    Conflicts/Replaces against kdelibs-dbg >= 4:3.91.0-1 and << 4:4.0.0-2

 -- Fathi Boudra <fabo@debian.org>  Sun, 13 Jan 2008 00:39:59 +0100

kde4libs (4:4.0.0-1) experimental; urgency=low

  * New upstream release. KDE 4.0.0 yay!

  +++ Changes by Armin Berres:

  * Add patch to disable debug information by default. They can be enabled
    with kdebugdialog.
  * Add patch to build no special debug code, but release code, and remove
    all hardcoded optimization and debug compiler flags. Use $(CXXFLAGS) and
    $(CFLAGS) instead.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update patch 15_kfreebsd_support to build in kfreebsd after latest changes
    in ConfigureChecks.cmake.
  * Update lintian overrides.
  * Add patch to fix make it build in arm and hopefully armel. Thanks Aurel.
    (Closes: #459515)

  +++ Changes by Matthew Rosewarne:

  * Add Homepage: to control.
  * Tweak package descriptions.
  * Replace dependency on xbase-clients with xauth.
  * Replace source:Version with binary:Version.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 09 Jan 2008 06:19:10 +0100

kde4libs (4:3.98.0~svn755919-1) experimental; urgency=low

  * New svn snapshot release to revision 755919.

  +++ Changes by Fathi Boudra:

  * Build-dep on soprano >= 1.99~rc2-1. (Closes: #458334)
  * Split kdelibs5-dev and kdelibs. Move Phonon in his own packages.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Fix offsets in 15_kfreebsd_support patch.
  * Update years in debian/copyright. Happy new year!

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 02 Jan 2008 14:08:10 +0100

kde4libs (4:3.98.0~svn753247-1) experimental; urgency=low

  * Svn snapshot of revision 753247.