@@ -38,7 +38,7 @@ Description: core libraries for all KDE 4 applications
 Package: kdelibs5-dev
 Section: libdevel
 Architecture: any
-Depends: kdelibs5 (= ${binary:Version}), shared-mime-info,
+Depends: ${shlibs:Depends}, kdelibs5 (= ${binary:Version}), shared-mime-info,
  libasound2-dev, libcupsys2-dev, libdbus-1-dev, libkeyutils-dev, libqt4-dev,
  libsoprano-dev (>= 1.99~rc2-1), libstreamanalyzer-dev (>= 0.5.7),
  libxml2-dev, libxml2-utils, libxslt1-dev, libxtst-dev, libungif4-dev,
@@ -75,8 +75,8 @@ Section: libdevel
 Architecture: any
 Priority: extra
 Depends: kdelibs5 (= ${binary:Version}), libqt4-debug, libc6-dbg [amd64]
-Conflicts: kdelibs-dbg (>= 4:3.91.0-1), kdelibs-dbg (<< 4:4.0.0-2)
-Replaces: kdelibs-dbg (>= 4:3.91.0-1), kdelibs-dbg (<< 4:4.0.0-2)
+Conflicts: kdelibs-dbg (>= 4:3.91.0-1)
+Replaces: kdelibs-dbg (>= 4:3.91.0-1)
 Description: debugging symbols for kdelibs
  This package contains the debugging symbols associated with kdelibs.
  They will automatically be used by gdb for debugging kdelibs-related
