@@ -4,9 +4,14 @@ THIS_SHOULD_GO_TO_UNSTABLE := 1
 
 RUNTIME_DEPS := kde-icons-oxygen, kdebase-runtime, kdebase-runtime-data
 CURRENTVERSION := $(shell head -1 debian/changelog  | sed 's/[^(]*(\([^)]*\)).*/\1/')
-DEB_DH_MAKESHLIBS_ARGS_kdelibs5 := -V'kdelibs5 (>= $(CURRENTVERSION)), $(RUNTIME_DEPS)'  
+
+DEB_DBG_PACKAGE_kdelibs5 := kdelibs5-dbg
+DEB_DBG_PACKAGE_kdelibs-bin := kdelibs5-dbg
+DEB_DBG_PACKAGE_libphonon4 := kdelibs5-dbg
+
 #In general we shouldn't bump on each upload, but in the beta cycles,
 #it is probably good. Else on upstream versions it is probably a good thing.
+DEB_DH_MAKESHLIBS_ARGS_kdelibs5 := -V'kdelibs5 (>= $(CURRENTVERSION)), $(RUNTIME_DEPS)'  
 
 include debian/cdbs/kde.mk
 
