@@ -1,9 +1,15 @@
 kde4libs (4:4.0.0-2) unstable; urgency=low
 
+  +++ Changes by Fathi Boudra:
+
   * Update arm patch. Avoid conversion to float. Thanks to Pino Toscano.
   * Move hal and pmount Recommends to kdebase-runtime-bin-kde4 package.
   * Rename kdelibs-dbg to kdelibs5-dbg.
     Conflicts/Replaces against kdelibs-dbg >= 4:3.91.0-1 and << 4:4.0.0-2
+
+  +++ Changes by Armin Berres:
+
+  * Add ${shlibs:Depends} dependency to kdelibs5-dev.
 
  -- Fathi Boudra <fabo@debian.org>  Sun, 13 Jan 2008 00:39:59 +0100
 
